# oGRAC

./: .bazelignore  .bazelrc  .clang-format  .gitattributes  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  Distributed DB Storage Solution 3.0.0 Open Source Software Notice.txt  NOTICE.md  QUICKSTART.md  README-CN.md  README.md  README_EN.md  build.sh  cc_combine.bzl  full_build_install.sh  global_options.bzl  init.sh
pkg/src/: BUILD.bazel  CMakeLists.txt
pkg/src/cluster/: BUILD.bazel  CMakeLists.txt  dtc_atomic_dist_lock.c  dtc_backup.c  dtc_backup.h  dtc_btree.c  dtc_btree.h  dtc_buffer.c  dtc_buffer.h  dtc_ckpt.c  dtc_ckpt.h  dtc_context.c  dtc_context.h  dtc_database.c  dtc_database.h  dtc_dc.c  dtc_dc.h  dtc_dcs.c  dtc_dcs.h  dtc_defs.h  dtc_dls.c  dtc_dls.h  dtc_dmon.c  dtc_dmon.h  dtc_drc.c  dtc_drc.h  dtc_drc_stat.c  dtc_drc_stat.h  dtc_drc_util.c  dtc_drc_util.h  dtc_gbp_rt_aly.c  dtc_gbp_rt_aly.h  dtc_global_atomic_lock.c  dtc_global_atomic_lock.h  dtc_heap.c  dtc_heap.h  dtc_log.c  dtc_log.h  dtc_rbp_rt_aly.c  dtc_rbp_rt_aly.h  (+23 more)
pkg/src/cms/: BUILD.bazel  CMakeLists.txt
pkg/src/common/: BUILD.bazel  CMakeLists.txt  cm_array.c  cm_array.h  cm_atomic.h  cm_base.h  cm_bilist.c  cm_bilist.h  cm_binary.c  cm_binary.h  cm_buddy.c  cm_buddy.h  cm_chan.c  cm_chan.h  cm_charset.c  cm_charset.h  cm_checksum.c  cm_checksum.h  cm_common_module.h  cm_config.c  cm_config.h  cm_context_pool.c  cm_context_pool.h  cm_coredump.h  cm_cpu.c  cm_cpu.h  cm_date.c  cm_date.h  cm_dbs_ctrl.c  cm_dbs_ctrl.h  cm_dbs_defs.h  cm_dbs_file.c  cm_dbs_file.h  cm_dbs_intf.h  cm_dbs_iofence.c  cm_dbs_iofence.h  cm_dbs_map.c  cm_dbs_map.h  cm_dbs_module.h  cm_dbs_pgpool.c  (+137 more)
pkg/src/dbstool/: CMakeLists.txt  dbs_adp.c  dbs_adp.h  dbs_main.c
pkg/src/driver/: BUILD.bazel  CMakeLists.txt
pkg/src/fdsa/: BUILD.bazel  CMakeLists.txt  oGRAC_fdsa.c  oGRAC_fdsa.h  oGRAC_fdsa_interface.h
pkg/src/gbp/: CMakeLists.txt  README.gbps.md  gbp_admin.cpp  gbp_config.cpp  gbp_config.h  gbp_log.h  gbp_protocol.cpp  gbp_protocol.h  gbp_server.cpp  gbp_server.h  gbp_state.cpp  gbp_state.h  gbp_std_compat.h  gbp_wire.h  gbps_contrl.sh  gbps_ctl  main.cpp
pkg/src/kernel/: BUILD.bazel  CMakeLists.txt  knl_core_table_defs.h  knl_database.c  knl_database.h  knl_db_alter.c  knl_db_alter.h  knl_db_create.c  knl_db_create.h  knl_db_ctrl.c  knl_db_ctrl.h  knl_extern_table_defs.h  knl_interface.c  knl_sys_part_defs.h
pkg/src/mec/: BUILD.bazel  CMakeLists.txt  mes_config.c  mes_config.h  mes_func.c  mes_func.h  mes_func_mock.c  mes_func_mock.h  mes_log_module.h  mes_msg_pool.c  mes_msg_pool.h  mes_packet.h  mes_queue.c  mes_queue.h  mes_tcp.c  mes_tcp.h  mes_type.h  mes_uc.c  mes_uc.h  mes_uc_interface.h
pkg/src/ogbox/: CMakeLists.txt  og_func.c  og_func.h  og_miner.c  og_miner.h  og_miner_desc.c  og_miner_desc.h  og_page.c  og_page.h  og_repair.c  og_repair.h  og_tbox.c  og_tbox.h  og_tbox_audit.c  og_tbox_audit.h  og_tbox_module.h
pkg/src/ogrst/: CMakeLists.txt  ogrst_main.c
pkg/src/ogsql/: CMakeLists.txt  ogsql_audit.c  ogsql_audit.h  ogsql_context.c  ogsql_context.h  ogsql_job.h  ogsql_resource.c  ogsql_resource.h  ogsql_service.c  ogsql_service.h  ogsql_slowsql.c  ogsql_slowsql.h  ogsql_statistics.c  ogsql_statistics.h  ogsql_stmt.c  ogsql_stmt.h
pkg/src/protocol/: BUILD.bazel  CMakeLists.txt  cs_ipc.c  cs_ipc.h  cs_listener.c  cs_listener.h  cs_packet.h  cs_pipe.c  cs_pipe.h  cs_protocol.c  cs_protocol.h  cs_protocol_module.h  cs_rdma.c  cs_rdma.h  cs_ssl.c  cs_ssl.h  cs_tcp.c  cs_tcp.h  cs_ub.c  cs_ub.h  cs_uds.c  cs_uds.h
pkg/src/rbp/: CMakeLists.txt  README.rbps.md  main.cpp  rbp_admin.cpp  rbp_config.cpp  rbp_config.h  rbp_log.h  rbp_protocol.cpp  rbp_protocol.h  rbp_server.cpp  rbp_server.h  rbp_state.cpp  rbp_state.h  rbp_std_compat.h  rbp_wire.h  rbps_contrl.sh  rbps_ctl
pkg/src/rc/: BUILD.bazel  CMakeLists.txt  rc_module.h  rc_reform.c  rc_reform.h
pkg/src/server/: BUILD.bazel  CMakeLists.txt  srv_agent.c  srv_agent.h  srv_blackbox.c  srv_blackbox.h  srv_device_adpt.c  srv_device_adpt.h  srv_emerg.c  srv_emerg.h  srv_instance.c  srv_instance.h  srv_job.c  srv_job.h  srv_lsnr.c  srv_lsnr.h  srv_main.c  srv_module.h  srv_reactor.c  srv_reactor.h  srv_replica.c  srv_replica.h  srv_rm.c  srv_rm.h  srv_sess_security.c  srv_sess_security.h  srv_session.c  srv_session.h  srv_sga.c  srv_sga.h  srv_stat.c  srv_stat.h  srv_view.c  srv_view.h  srv_view_dtc_local.c  srv_view_dtc_local.h  srv_view_lock.c  srv_view_lock.h  srv_view_sess.c  srv_view_sess.h  (+4 more)
pkg/src/tms/: BUILD.bazel  CMakeLists.txt  tms_module.h  tms_monitor.c  tms_monitor.h  tms_sig_calltrace.c  tms_sig_calltrace.h
pkg/src/upgrade_check/: BUILD.bazel  cm_row_persist.h  cms_persistent.h  knl_alter_space_persist.h  knl_archive_persist.h  knl_buffer_persistent.h  knl_create_space_persist.h  knl_ctlg_persistent.h  knl_ctrl_restore_persist.h  knl_datafile_persistent.h  knl_db_ctrl_persistent.h  knl_dc_persistent.h  knl_defs_persistent.h  knl_drop_space_persist.h  knl_heap_persistent.h  knl_lob_persistent.h  knl_log_file_persistent.h  knl_log_persistent.h  knl_map_persistent.h  knl_privilege_persistent.h  knl_profile_persistent.h  knl_punch_space_persist.h  knl_sequence_persistent.h  knl_session_persistent.h  knl_shrink_space_persist.h  knl_space_base_persist.h  knl_table_persistent.h  knl_tenant_persist.h  knl_tran_persistent.h  knl_undo_persist.h  knl_user_persist.h  knl_xa_persist.h  pcr_btree_persistent.h  pcr_heap_persistent.h  pl_logic_persist.h  rb_purge_persistent.h  rcr_btree_protect.h  upgrade_struct_check.h
pkg/src/utils/: CMakeLists.txt
pkg/src/version/: client_version.c  gsql_version.c  og_version.c  ogsql_version.c
pkg/test/: CMakeLists.txt  ora-dialect.sql  test_opt.bzl  zenith_key1
pkg/test/og_regress/: .gitignore  CMakeLists.txt  README.en.md  README.md  comment_at_first.sql  do_all_test.sh  funcs.c  multiplesql.sql  og_regress_main.c  og_schedule_part1  og_schedule_part2  ogdb_regress_ograc.sh  testslowsql.sql
pkg/test/om_test/: LLT_requirements.txt  python_LLT.py
pkg/test/unit_test/: CMakeLists.txt
(+1752 files in other folders)
