## og_regress ##
add_executable(og_regress og_regress_main.c)
set_target_properties(og_regress PROPERTIES LINKER_LANGUAGE "C")
set_target_properties(og_regress PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${OGRACDB_BIN})
if (USE_FUZZASAN)
     target_link_libraries(og_regress PRIVATE zeclient zeprotocol zesql zekernel zecommon dl m rt pthread z zstd lz4 Secodefuzz)
else ()
     target_link_libraries(og_regress PRIVATE zeclient zeprotocol zesql zekernel zecommon dl m rt pthread z zstd lz4)
endif(USE_FUZZASAN)
