message(STATUS "build mes_ut...")

include_directories(${CMAKE_SOURCE_DIR}/pkg/src/cluster)
include_directories(${CMAKE_SOURCE_DIR}/pkg/src/kernel)
include_directories(${CMAKE_SOURCE_DIR}/pkg/src/rc)
include_directories(${CMAKE_SOURCE_DIR}/pkg/src/common)
set(MES_UT_SOURCE ${CMAKE_SOURCE_DIR}/pkg/test/unit_test/ut/mes/mes_test_main.cpp
                ${CMAKE_SOURCE_DIR}/pkg/test/unit_test/ut/mes/mes_example_test.cpp)

#add_compile_options(-fno-common)
add_compile_options(-Wall -fpermissive)

#add_link_options(-Wl, -Bsymbolic)
add_link_options(-rdynamic)

add_executable(mes_test ${MES_UT_SOURCE})
set_target_properties(mes_test PROPERTIES LINKER_LANGUAGE "CXX")

target_link_libraries(mes_test 
                     -Wl,--start-group 
                     gtest mockcpp gmock zetms zecms zeprotocol m rt dl z zstd lz4
                     zecmssrc zeclient zerc zecommon zemes zefdsa zecluster
                     zeserver zekernel zesql pthread  z 
                     -Wl,--end-group)
target_compile_definitions(mes_test PRIVATE -DOG_LIB_VERSION=${DD_OG_LIB_VERSION})
target_compile_definitions(mes_test PRIVATE -DGETDBVERSION=${DD_GETDBVERSION})